--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Título de la página</title>
 </head>
 <body>
-  <h1>Hola</h1>
+  <header>
+      <ul>
+          <li>Logo</li>
+          <li>Notas parche</li>
+          <li>Descargar</li>
+          <li>Discord</li>
+          <li>Redes sociales</li>
+          <li>FAQ</li>
+      </ul>
+  </header>
 </body>
 </html>
