--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <header>
       <ul>
-          <li>Logo</li>
-          <li>Notas parche</li>
-          <li>Descargar</li>
-          <li>Discord</li>
-          <li>Redes sociales</li>
-          <li>FAQ</li>
+          <li> <a href="#">Logo</a></li>
+          <li> <a href="#">Notas parche</a> </li>
+          <li> <a href="#">Descargar</a> </li>
+          <li> <a href="#">Discord</a> </li>
+          <li> <a href="#">Redes sociales</a> </li>
+          <li> <a href="#">FAQ</a> </li>
       </ul>
   </header>
 </body>
