--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 <body>
   <header>
-      <ul>
-          <li> <a href="#">Logo</a></li>
-          <li> <a href="#">Notas parche</a> </li>
-          <li> <a href="#">Descargar</a> </li>
-          <li> <a href="#">Discord</a> </li>
-          <li> <a href="#">Redes sociales</a> </li>
-          <li> <a href="#">FAQ</a> </li>
-      </ul>
+      <nav>
+          <ul>
+              <li> <a href="#">Logo</a></li>
+              <li> <a href="#">Notas parche</a> </li>
+              <li> <a href="#">Descargar</a> </li>
+              <li> <a href="#">Discord</a> </li>
+              <li> <a href="#">Redes sociales</a> </li>
+              <li> <a href="#">FAQ</a> </li>
+          </ul>
+      </nav>
   </header>
 </body>
 </html>
