Agregado multilenguaje y estructura inicial.
Error: versionTexto no aparece al estar dentro de una ID, investigar.

--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Título de la página</title>
-</head>
-<body>
-  <header>
-      <nav>
-          <ul>
-              <li> <a href="#">Logo</a></li>
-              <li> <a href="#">Notas parche</a> </li>
-              <li> <a href="#">Descargar</a> </li>
-              <li> <a href="#">Discord</a> </li>
-              <li> <a href="#">Redes sociales</a> </li>
-              <li> <a href="#">FAQ</a> </li>
-          </ul>
-      </nav>
-  </header>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" href="estiloMainPage.css">
+        <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
+        <title>PokeSharp - Inicio</title>
+    </head>
+    <body>
+        <header>
+            <nav>
+                <ul>
+                    <li id="logo"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </li>
+                    <li id="descargas"> <a href="#">Descargar</a> </li>
+                    <li id="notasParche"> <a href="#">Notas parche</a> </li>
+                    <li id="discord"> <a href="#">Discord</a> </li>
+                    <li id="redesSociales"> <a href="#">Redes sociales</a> </li>
+                    <li id="faq"> <a href="#">FAQ</a> </li>
+                    <li>
+                        <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
+                        <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        
+        <div id="rectanguloGrande">
+            <h2 id="versionJuego">En desarrollo</h2>
+            <div class="descargar-container">
+                <button class="descargar-boton">
+                    <img src="multimedia/images/imagenDescargar.png" alt="Imagen" class="descargar-imagen">
+                    <span id="descargar-texto">Descargar <br>
+                        <span id="versionTexto">No disponible</span>
+                    </span>
+                    
+                </button>
+            </div>
+        </div>
+        <div id="segundoRectangulo"></div>
+        <script src="scriptTraducciones.js" defer></script>
+    </body>
 </html>
