--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
             </div>
         </div>
         <div id="segundoRectangulo"></div>
+
+        <footer>
+            <div id="divFooter">
+                <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
+            </div>
+        </footer>
         <script src="scriptTraducciones.js" defer></script>
     </body>
 </html>
