--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="descargar-container">
                 <button class="descargar-boton">
                     <img src="multimedia/images/imagenDescargar.png" alt="Imagen" class="descargar-imagen">
-                    <span id="descargar-texto">Descargar <br>
+                    <div class="comodin">
+                        <span id="descargar-texto">Descargar</span>
                         <span id="versionTexto">No disponible</span>
-                    </span>
-                    
+                    </div>
                 </button>
             </div>
         </div>
@@ -44,6 +44,12 @@
             <div id="divFooter">
                 <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
                 <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
+                <p>Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
+                <p>PokeSharp no está afiliado ni a Nintendo, Game Freak, ni The Pokémon Company.</p>
+                <hr width="100px">
+                <div id="redesSocialesFooter">
+                    <p>Logos de Redes aquí</p>
+                </div>
             </div>
         </footer>
         <script src="scriptTraducciones.js" defer></script>
