Corregido Tipo de Letra, añadido segundaPantalla y traducciones.

--- a/index.html
+++ b/index.html
@@ -31,29 +31,50 @@
                 <h2 id="versionJuego" data-translate="versionJuego">En desarrollo</h2>
                 <div class="descargar-container">
                     <button class="descargar-boton">
-                        <img src="multimedia/images/imagenDescargar.png" alt="Imagen" class="descargar-imagen">
-                        <div class="comodin">
+                        <img src="multimedia/images/imagenDescargar.png" alt="ImagenDescargar" class="descargar-imagen">
+                        <div>
                             <span id="descargar-texto" data-translate="descargarTexto">Descargar</span>
                             <span id="versionTexto" data-translate="versionTexto">No disponible</span>
                         </div>
                     </button>
                 </div>
             </div>
-            <div id="segundoRectangulo"></div>
+            <div id="segundoRectangulo">
+                <h2 data-translate="queEs">¿Qué es PokeSharp?</h2>
+                <p data-translate="queEsP1">Es un juego fangame de Pokémon con una aventura única ¿A qué esperas?</p>
+                <p data-translate="queEsP2">Historia, pokémons únicos y NPCs únicos y entretenidos.</p>
+                <div class="video">
+                    <iframe width="650" height="315" src="https://www.youtube.com/embed/UlSvYxlFUqU?si=jMBAI5pb2cuKcgvv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                    encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <h3 data-translate="npcsUnicos" class="retroFont">NPCs únicos</h3>
+                <br>
+                <p>1 o 2 imágenes aquí</p>
+                <br>
+                <h3 data-translate="juegosInGame" class="retroFont">Juegos in-game</h3>
+                <br>
+                <p>1 o 2 imágenes aquí</p>
+                <br>
+                <h3 data-translate="hechoCon" class="retroFont">Hecho con</h3>
+                <div id="hechoConDiv">
+                    <img src="multimedia/images/logoCSharp2.png" alt="GodotEngine" class="godotLogo">
+                    <img src="multimedia/images/godotEngineLogo.png" alt="GodotEngine" class="godotLogo">
+                </div>
+            </div>
         </main>
 
         <footer>
             <div id="divFooter">
                 <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
                 <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
-                <p>Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
-                <p>PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
-                <hr width="100px">
+                <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
+                <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
+                <hr width="200px">
                 <div id="redesSocialesFooter">
                     <p>Logos de Redes aquí</p>
                 </div>
             </div>
         </footer>
-        <script src="scriptTraducciones.js" defer></script>
+        <script src="scripts/scriptTraducciones.js" defer></script>
     </body>
 </html>
