Trabajando en segundaPantalla.
Nuevas ideas de como hacerlo, imagenes de prueba colocadas para buscar un nuevo formato. Acabar página principal o dejar casi y hacer el resto de páginas.

--- a/index.html
+++ b/index.html
@@ -47,14 +47,26 @@
                     <iframe width="650" height="315" src="https://www.youtube.com/embed/UlSvYxlFUqU?si=jMBAI5pb2cuKcgvv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                     encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <h3 data-translate="npcsUnicos" class="retroFont">NPCs únicos</h3>
-                <br>
-                <p>1 o 2 imágenes aquí</p>
-                <br>
-                <h3 data-translate="juegosInGame" class="retroFont">Juegos in-game</h3>
-                <br>
-                <p>1 o 2 imágenes aquí</p>
-                <br>
+                <!-- Este titulo igual lo quitaria y usaria principalmente el de dentro,
+                  para ir hacia abajo y usando ese titulo, se separa con un <hr> y listo.
+                <h3 data-translate="juegosInGame" class="retroFont">Juegos in-game</h3>-->
+                <div class="content-section">
+                    <img src="multimedia/images/imagenDeEjemploTemporal.png" alt="Ejemplo">
+                    <div class="content-text">
+                        <h3 class="content-title">Minijuegos</h3>
+                        <p>En medio del juego encontrarás minijuegos conocidos y entretenidos,</p>
+                        <p>con los que podrás ganar recompensas o pasar un buen rato.</p>
+                    </div>
+                </div>
+                <!--<h3 data-translate="npcsUnicos" class="retroFont">NPCs únicos</h3>-->
+                <div class="content-section reves">
+                    <div class="content-text">
+                        <h3 class="content-title">NPCs únicos</h3>
+                        <p>Texto de NPCs únicos, pendiente.</p>
+                        <p>(Imagenes temporales)</p>
+                    </div>
+                    <img src="multimedia/images/imagenDeEjemploTemporal.png" alt="Ejemplo" class="content-image">
+                </div>
                 <h3 data-translate="hechoCon" class="retroFont">Hecho con</h3>
                 <div id="hechoConDiv">
                     <img src="multimedia/images/logoCSharp2.png" alt="GodotEngine" class="godotLogo">
