MainPage cambiada, leer descripción.
Imagenes cambiadas a unas decentes pero no definitivas, texto cambiado a las descripciones, tooltip al apartado de "Made with" para ver su nombre y nuevas traducciones.

--- a/index.html
+++ b/index.html
@@ -44,34 +44,42 @@
                 <p data-translate="queEsP1">Es un juego fangame de Pokémon con una aventura única ¿A qué esperas?</p>
                 <p data-translate="queEsP2">Historia, pokémons únicos y NPCs únicos y entretenidos.</p>
                 <div class="video">
+                    <!-- AQUI TIENE QUE IR EL TRAILER DEL JUEGO, EL VIDEO QUE SE MUESTRA ES DE PRUEBA -->
                     <iframe width="650" height="315" src="https://www.youtube.com/embed/UlSvYxlFUqU?si=jMBAI5pb2cuKcgvv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
                     encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
-                <!-- Este titulo igual lo quitaria y usaria principalmente el de dentro,
-                  para ir hacia abajo y usando ese titulo, se separa con un <hr> y listo.
-                <h3 data-translate="juegosInGame" class="retroFont">Juegos in-game</h3>-->
                 <div class="content-section">
-                    <img src="multimedia/images/imagenDeEjemploTemporal.png" alt="Ejemplo">
+                    <img src="multimedia/images/fondoParaMinijuegos.png" alt="Ejemplo">
                     <div class="content-text">
-                        <h3 class="content-title">Minijuegos</h3>
-                        <p>En medio del juego encontrarás minijuegos conocidos y entretenidos,</p>
-                        <p>con los que podrás ganar recompensas o pasar un buen rato.</p>
+                        <h3 data-translate="minigames" class="content-title">Minijuegos</h3>
+                        <p data-translate="text1Minigames">En medio del juego encontrarás minijuegos conocidos y entretenidos,</p>
+                        <p data-translate="text2Minigames">con los que podrás ganar recompensas o pasar un buen rato.</p>
                     </div>
                 </div>
-                <!--<h3 data-translate="npcsUnicos" class="retroFont">NPCs únicos</h3>-->
+                <hr class="separateCategories">
                 <div class="content-section reves">
                     <div class="content-text">
-                        <h3 class="content-title">NPCs únicos</h3>
-                        <p>Texto de NPCs únicos, pendiente.</p>
-                        <p>(Imagenes temporales)</p>
+                        <h3 data-translate="uniqueNpcs" class="content-title">NPCs únicos</h3>
+                        <p data-translate="textNpcs">Encontrarás NPCs a lo largo de tu aventura, completamente nuevos, personas reales con guiños a cosas relacionadas con esa persona en la vida real.</p>
                     </div>
-                    <img src="multimedia/images/imagenDeEjemploTemporal.png" alt="Ejemplo" class="content-image">
+                    <img src="multimedia/images/fondoNPCsTemporal.png" alt="Ejemplo" class="content-image">
                 </div>
+                <!-- pokemons unicos? -->
+                <hr class="separateCategories">
+                
                 <h3 data-translate="hechoCon" class="retroFont">Hecho con</h3>
-                <div id="hechoConDiv">
-                    <img src="multimedia/images/logoCSharp2.png" alt="GodotEngine" class="godotLogo">
-                    <img src="multimedia/images/godotEngineLogo.png" alt="GodotEngine" class="godotLogo">
+
+                <div id="hechoConDiv" class="image-container">
+                    <div class="image-item">
+                        <img src="multimedia/images/logoCSharp2.png" alt="C# Logo" class="image">
+                        <div class="tooltip">C#</div>
+                    </div>
+                    <div class="image-item">
+                        <img src="multimedia/images/godotEngineLogo.png" alt="Godot Engine Logo" class="image">
+                        <div class="tooltip">Godot Engine</div>
+                    </div>
                 </div>
+                <!-- falta database -->
             </div>
         </main>
 
@@ -81,7 +89,7 @@
                 <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
                 <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
                 <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
-                <hr width="200px">
+                <hr>
                 <div id="redesSocialesFooter">
                     <p>Logos de Redes aquí</p>
                 </div>
