Iconos de redes sociales añadidos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="styles/estiloMainPage.css">
+        <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Inicio</title>
     </head>
@@ -88,7 +89,9 @@
                 <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
                 <hr>
                 <div id="redesSocialesFooter">
-                    <p>Logos de Redes aquí</p>
+                    <a href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://x.com" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://youtube.es" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
                 </div>
             </div>
         </footer>
@@ -102,6 +105,6 @@
 <!-- External websites used
 
 Download button: https://uiverse.io/
-
+Kit iconos: https://fontawesome.com/ (Kit: https://fontawesome.com/kits/15d8dc6e81/setup)
 
 -->
