--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="styles/estiloMainPage.css">
-        <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous" rel="stylesheet"></script>
+        <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Inicio</title>
     </head>
@@ -53,19 +53,19 @@
                     encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 </div>
                 <div class="content-section">
-                    <img src="multimedia/images/fondoParaMinijuegos.png" alt="Ejemplo">
                     <div class="content-text">
                         <h3 data-translate="minigames" class="content-title">Minijuegos</h3>
                         <p data-translate="text1Minigames">En medio del juego encontrarás minijuegos conocidos y entretenidos, con los que podrás ganar recompensas o pasar un buen rato.</p>
                     </div>
+                    <img src="multimedia/images/fondoParaMinijuegos.png" alt="Ejemplo">
                 </div>
                 <hr class="separateCategories">
                 <div class="content-section reves">
+                    <img src="multimedia/images/fondoNPCsTemporal.png" alt="Ejemplo" class="content-image">
                     <div class="content-text">
                         <h3 data-translate="uniqueNpcs" class="content-title">NPCs únicos</h3>
                         <p data-translate="textNpcs">Encontrarás NPCs a lo largo de tu aventura, completamente nuevos, personas reales con guiños a cosas relacionadas con esa persona en la vida real.</p>
                     </div>
-                    <img src="multimedia/images/fondoNPCsTemporal.png" alt="Ejemplo" class="content-image">
                 </div>
                 <!-- pokemons unicos? -->
                 <hr class="separateCategories">
