--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal">
+                    <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
+                    <a href="index.html"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
 
                 <nav>
@@ -22,7 +23,7 @@
                         <li id="notasParche"> <a data-translate="versionesNav" href="#">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="#">Redes</a> </li>
-                        <li id="faq"> <a data-translate="faqNav" href="#">FAQ</a> </li>
+                        <li id="faq"> <a data-translate="faqNav" href="pages/faq.html">FAQ</a> </li>
                         <li>
                             <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
