Pruebas para quitar el .html

--- a/faq.html
+++ b/faq.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="../styles/estiloMainPage.css">
-        <link rel="stylesheet" href="../styles/estiloFAQ.css">
+        <link rel="stylesheet" href="styles/estiloMainPage.css">
+        <link rel="stylesheet" href="styles/estiloFAQ.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Inicio</title>
@@ -14,7 +14,7 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal">
+                    <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal">
                 </div>
 
                 <nav>
@@ -25,8 +25,8 @@
                         <li id="redesSociales"> <a data-translate="redesNav" href="#">Redes</a> </li>
                         <li id="faq"> <a data-translate="faqNav" href="#">FAQ</a> </li>
                         <li>
-                            <img src="../multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
-                            <img src="../multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
+                            <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
+                            <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
                         </li>
                     </ul>
                 </div>
