--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li id="notasParche"> <a data-translate="versionesNav" href="#">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="#">Redes</a> </li>
-                        <li id="faq"> <a data-translate="faqNav" href="pages/faq.html">FAQ</a> </li>
+                        <li id="faq"> <a data-translate="faqNav" href="faq.html">FAQ</a> </li>
                         <li>
                             <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
                             <img src="multimedia/images/banderaUnitedStates.png" alt="English" id="english-flag" class="flag">
