--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
         <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Inicio</title>
     </head>
+    <script>
+        // Detecta si la URL no tiene extensión y redirige a la versión con `.html`
+        const path = window.location.pathname;
+        if (path !== '/' && !path.includes('.') && !path.endsWith('/')) {
+            window.location.href = `${path}.html`;
+        }
+    </script>
     <body>
         <header>
             <div id="header-container">
                 <div id="logo-container">
                     <!-- Aqui hay un error, se baja un poco y no se centra bien con el atributo <a> -->
-                    <a href="index.html"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="index"> <img src="multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
 
                 <nav>
