--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
         <link rel="icon" href="multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
         <title data-translate="title">PokeSharp - Inicio</title>
     </head>
-    <script>
-        // Detecta si la URL no tiene extensión y redirige a la versión con `.html`
-        const path = window.location.pathname;
-        if (path !== '/' && !path.includes('.') && !path.endsWith('/')) {
-            window.location.href = `${path}.html`;
-        }
-    </script>
     <body>
         <header>
             <div id="header-container">
@@ -26,10 +19,10 @@
 
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="#">Descargar</a> </li>
-                        <li id="notasParche"> <a data-translate="versionesNav" href="#">Actualizaciones</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="">Descargar</a> </li>
+                        <li id="notasParche"> <a data-translate="versionesNav" href="updates">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
-                        <li id="redesSociales"> <a data-translate="redesNav" href="#">Redes</a> </li>
+                        <li id="redesSociales"> <a data-translate="redesNav" href="socialMedia">Redes</a> </li>
                         <li id="faq"> <a data-translate="faqNav" href="faq">FAQ</a> </li>
                         <li>
                             <img src="multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
