--- a/faq/index.html
+++ b/faq/index.html
@@ -39,7 +39,7 @@
         <div id="secondPage">
             <h2 data-translate="faq1">1. ¿Cómo puedo jugarlo?</h2>
             <p data-translate="faq1P1">Puedes jugarlo en un principio en PC, próximamente podría salir en móvil.</p>
-            <p data-translate="faq1P2">El enlace de descarga es: <a href="https://maek0s.github.io/PokeSharpWeb/#">Pendiente.</a></p>
+            <p data-translate="faq1P2">El enlace de descarga es: <a href="https://maek0s.github.io/PokeSharpWeb/">Pendiente.</a></p>
 
             <h2 data-translate="faq2">2. ¿Qué es PokeSharp?</h2>
             <p data-translate="faq2P1">PokeSharp es un juego fangame de Pokémon, desarrollado por una única persona,</p>
@@ -47,14 +47,47 @@
 
             <h2 data-translate="faq3">3. ¿Cúando estará disponible oficialmente?</h2>
             <p data-translate="faq3P1">PokeSharp aún está en desarrollo, por lo que no hay una fecha de lanzamiento oficial.</p>
-            <p data-translate="faq3P2">Puedes seguir el progreso en el servidor de Discord.</p>
+            <p data-translate="faq3P2">Puedes seguir el progreso en el <a href="https://discord.gg/FqJ6ZgYRrU">servidor de Discord</a>.</p>
 
+            <h2 data-translate="faq4">4. ¿Por qué se creó PokeSharp?</h2>
+            <p data-translate="faq4P1">PokeSharp tuvo muchas antiguas facetas, fueron intentos de hacer un juego sobre Pokémon como fuera posible,</p>
+            <p data-translate="faq4P2">pero al final terminó siendo un proyecto de final de curso para el grado superior DAM.</p>
+
+            <h2 data-translate="faq5">5. ¿Cómo surgió la idea?</h2>
+            <p data-translate="faq5P1">La idea se creó 1 año antes de su creación, por una persona distinta al creador, fue <a href="https://github.com/izancluac">Izan</a>, mi compañero de clase,</p>
+            <p data-translate="faq5P2">el cual intentó hacer algo por terminal con Java, y decidí preguntarle a unirme a su proyecto, yo me encargue de</p>
+            <p data-translate="faq5P3">las interfaces, pero al final no se pudo por conocimiento y falta de tiempo, y 1 año después apareció que teniamos que</p>
+            <p data-translate="faq5P4">hacer un proyecto individualmente, y decidí preguntarle si podía seguir empezando desde 0 de otra forma, obtuve el permiso,</p>
+            <p data-translate="faq5P5">cambié el nombre de PokeJava a PokeSharp ya que antes se planteó en hacer en Java y... aquí estamos.</p>
+
+            <h2 data-translate="faq6">6. ¿De dónde viene el nombre de PokeSharp?</h2>
+            <p data-translate="faq6P1">El nombre de PokeSharp viene de su nombre antiguo PokeJava, que sugerí en su momento y finalmente al</p>
+            <p data-translate="faq6P2">cambiar de lenguaje de programación, decidí cambiar el nombre a PokeSharp, ya que me gustó más.</p>
+
+            <h2 data-translate="faq7">7. ¿Qué se necesita para jugar?</h2>
+            <p data-translate="faq7P1">Los requisitos mínimos y recomendados están pendientes pero debería ser bastante accesible.</p>
 
             <h2 data-translate="faq?">?. ¿Puedo colaborar?</h2>
             
         </div>
 
+        <footer>
+            <div id="divFooter">
+                <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormalFooter">
+                <span id="CopyrightTextoFooter">&copy; 2025 PokeSharp</span>
+                <p data-translate="pPropiedadFooter">Todas las texturas, imágenes y otros activos utilizados pertenecen a sus respectivos propietarios.</p>
+                <p data-translate="pAfiliadoFooter">PokeSharp no está afiliado ni a Nintendo, Game Freak, ni a The Pokémon Company.</p>
+                <hr>
+                <div id="redesSocialesFooter">
+                    <a href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-discord"></i></a>
+                    <a href="https://x.com" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://youtube.es" target="_blank" rel="noopener noreferrer"> <i class="fa-brands fa-youtube"></i></a>
+                </div>
+            </div>
+        </footer>
+
         <!-- Scripts -->
         <script src="../scripts/scriptTraducciones.js" defer></script>
     </body>
+
 </html>
