--- a/faq/index.html
+++ b/faq/index.html
@@ -14,7 +14,7 @@
         <header>
             <div id="header-container">
                 <div id="logo-container">
-                    <a href="/"> <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
+                    <a href="../"> <img src="../multimedia/images/pokeSharpLogoProvisional.png" alt="Logo PokeSharp" id="logoNormal"> </a>
                 </div>
                 <nav>
                     <ul>
