+ Creditos.md, FAQ casi acabado.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
             <div id="rectanguloGrande">
                 <h2 id="versionJuego" data-translate="versionJuego">En desarrollo</h2>
-                <!-- Credit to: https://uiverse.io/Yaya12085/old-lionfish-77 -->
                 <button class="button" id="btnDownload" onclick="download()">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"><g stroke-width="0" id="SVGRepo_bgCarrier"></g>
                 <g stroke-linejoin="round" stroke-linecap="round" id="SVGRepo_tracerCarrier"></g><g id="SVGRepo_iconCarrier">
@@ -48,6 +47,7 @@
                 <h2 data-translate="queEs">¿Qué es PokeSharp?</h2>
                 <p data-translate="queEsP1">Es un juego fangame de Pokémon con una aventura única ¿A qué esperas?</p>
                 <p data-translate="queEsP2">Historia, pokémons únicos y NPCs únicos y entretenidos.</p>
+                <p><i>(Este vídeo es de prueba)</i></p>
                 <div class="video">
                     <!-- AQUI TIENE QUE IR EL TRAILER DEL JUEGO, EL VIDEO QUE SE MUESTRA ES DE PRUEBA -->
                     <iframe width="650" height="315" src="https://www.youtube.com/embed/UlSvYxlFUqU?si=jMBAI5pb2cuKcgvv" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
@@ -58,11 +58,11 @@
                         <h3 data-translate="minigames" class="content-title">Minijuegos</h3>
                         <p data-translate="text1Minigames">En medio del juego encontrarás minijuegos conocidos y entretenidos, con los que podrás ganar recompensas o pasar un buen rato.</p>
                     </div>
-                    <img src="multimedia/images/fondoParaMinijuegos.png" alt="Ejemplo">
+                    <img src="multimedia/images/fondoParaMinijuegos.png" alt="Minijuegos in-game">
                 </div>
                 <hr class="separateCategories">
                 <div class="content-section reves">
-                    <img src="multimedia/images/fondoNPCsTemporal.png" alt="Ejemplo" class="content-image">
+                    <img src="multimedia/images/fondoNPCsTemporal.png" alt="NPCs únicos" class="content-image">
                     <div class="content-text">
                         <h3 data-translate="uniqueNpcs" class="content-title">NPCs únicos</h3>
                         <p data-translate="textNpcs">Encontrarás NPCs a lo largo de tu aventura, completamente nuevos, personas reales con guiños a cosas relacionadas con esa persona en la vida real.</p>
@@ -106,10 +106,3 @@
         <script src="scripts/scriptsHome.js" defer></script>
     </body>
 </html>
-
-<!-- External websites used
-
-Download button: https://uiverse.io/
-Kit iconos: https://fontawesome.com/ (Kit: https://fontawesome.com/kits/15d8dc6e81/setup)
-
--->
