--- a/faq/index.html
+++ b/faq/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../styles/estiloFAQ.css">
         <script src="https://kit.fontawesome.com/15d8dc6e81.js" crossorigin="anonymous"></script>
         <link rel="icon" href="../multimedia/images/pokeSharpLogoProvisional.png" type="image/png">
-        <title data-translate="title">PokeSharp - Inicio</title>
+        <title data-translate="title">PokeSharp - FAQ</title>
     </head>
     <body>
         <header>
@@ -19,7 +19,7 @@
                 <nav>
                     <ul>
                         <li id="descargas"> <a data-translate="descargarNav" href="/">Descargar</a> </li>
-                        <li id="notasParche"> <a data-translate="versionesNav" href="/patchNotes">Actualizaciones</a> </li>
+                        <li id="notasParche"> <a data-translate="versionesNav" href="/updates">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="/socialMedia">Redes</a> </li>
                         <li id="faq"> <a data-translate="faqNav" href="">FAQ</a> </li>
