(Actualizaciones) Cambios en las versiones
Próximamente las versiones se desplegarán de forma dinámica por JS.

--- a/updates/index.html
+++ b/updates/index.html
@@ -36,11 +36,15 @@
             <h1 data-translate="updatesTitle">Actualizaciones</h1>
         </div>
 
+        <!-- Esto será de forma dinámica -->
         <div id="secondPage">
             <h2>Última versión</h2>
             <div class="update">
                 <details>
-                    <summary>v0.0.2 - En desarrollo</summary>
+                    <summary>
+                        <span>v0.0.1 - En desarrollo</span>
+                        <i class="fa-solid fa-plus"></i>
+                    </summary>
                     <p>Actualmente se está trabajando en la primera versión del juego.</p>
                 </details>
             </div>
@@ -48,14 +52,20 @@
             <h2>Versiones anteriores</h2>
             <div class="update">
                 <details>
-                    <summary>v0.0.1 - Pre-Alpha</summary>
+                    <summary>
+                        <span>v0.0.0 - Pre-Alpha</span>
+                        <i class="fa-solid fa-plus"></i>
+                    </summary>
                     <p>No existe esta versión todavia.</p>
                 </details>
             </div>
 
             <div class="update">
                 <details>
-                    <summary>v0.0.0 - Pre-Alpha</summary>
+                    <summary>
+                        <span>v0.0.0 - Pre-Alpha</span>
+                        <i class="fa-solid fa-plus"></i>
+                    </summary>
                     <p>No existe esta versión todavia.</p>
                 </details>
             </div>
@@ -63,5 +73,6 @@
 
         <!-- Scripts -->
         <script src="../scripts/scriptTraducciones.js" defer></script>
+        <script src="../scripts/scriptOtros.js" defer></script>
     </body>
 </html>
