--- a/faq/index.html
+++ b/faq/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="/">Descargar</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="/updates">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
                         <li id="redesSociales"> <a data-translate="redesNav" href="/socialMedia">Redes</a> </li>
