--- a/updates/index.html
+++ b/updates/index.html
@@ -18,10 +18,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li id="descargas"> <a data-translate="descargarNav" href="../">Descargar</a> </li>
+                        <li id="descargas"> <a data-translate="descargarNav" href="/">Descargar</a> </li>
                         <li id="notasParche"> <a data-translate="versionesNav" href="">Actualizaciones</a> </li>
                         <li id="discord"> <a data-translate="discordNav" href="https://discord.gg/FqJ6ZgYRrU" target="_blank" rel="noopener noreferrer">Discord</a> </li>
-                        <li id="redesSociales"> <a data-translate="redesNav" href="../socialMedia">Redes</a> </li>
+                        <li id="redesSociales"> <a data-translate="redesNav" href="../socialMedia/">Redes</a> </li>
                         <li id="faq"> <a data-translate="faqNav" href="../faq/">FAQ</a> </li>
                         <li>
                             <img src="../multimedia/images/banderaEspanya.png" alt="Español" id="spanish-flag" class="flag">
